Fix body padding on mobile, pass 2.

--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ body {
   display: flex;
   flex-direction: column;
   background-color: #FAFAF9;
-  margin: 0;
-  margin-top: 10.125rem;
+  margin: 0 2rem;
 }
 
 img.icon {
@@ -95,6 +94,7 @@ p.testimonial-text {
 @media screen and (min-width: 1024px) {
   body {
     margin: 0 6rem;
+    margin-top: 10.125rem;
   }
 
   .testimonial {
